Simplified and added tests for member caches. Fixed an issue where some tests wouldn't run with "mvn verify".